--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -113,7 +113,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-block" align="left">
-                <input type="radio" name="sex" value="男" title="男" checked>
+                <input type="radio" name="sex" value="男" title="男">
                 <input type="radio" name="sex" value="女" title="女">
             </div>
         </div>
@@ -153,7 +153,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-block" align="left">
-                <input type="radio" name="updateSex" value="男" title="男" checked>
+                <input type="radio" name="updateSex" value="男" title="男">
                 <input type="radio" name="updateSex" value="女" title="女">
             </div>
         </div>
@@ -175,110 +175,114 @@
     //隐藏添加、更新布局
     $("#addUser").hide();
     $("#updateUser").hide();
+
     //获取当前登录用户信息
     $.ajax({
         type: "get",
-        contentType: "application/json",
         url: "/manager/getCurManager",
+        contentType: "application/json",
         success: function (res) {
-            $("#username").html(res.data.username);
+            if (res.code === 0) {
+                $("#username").html(res.data.username);
+            }
         }
     });
 
     //初始化layer
-    layui.use("layer", function () {
-        layer = layui.layer;
-    });
+    var layer = layui.layer;
 
     //注意：导航 依赖 element 模块，否则无法进行功能性操作
-    layui.use("element", function () {
-        element = layui.element;
+    var element = layui.element;
+
+    //初始化Form
+    var form = layui.form;
+
+    //添加用户
+    form.on("submit(addUser)", function (data) {
+        addUser(data.field);
+    });
+    //更新用户
+    form.on("submit(updateUser)", function (data) {
+        updateUser(data.field);
     });
 
     //初始化table
-    layui.use("table", function () {
-        table = layui.table;
-        //加载table数据
-        table.render({
-            "elem": "#user",
-            "url": "/user/getUsers",
-            "cellMinWidth": 80,
-            "cols": [
-                [
-                    {"field": "id", "width": 100, "title": "ID", "sort": true, "align": "center"},
-                    {"field": "username", "width": 100, "title": "用户名", "align": "center"},
-                    {"field": "password", "width": 100, "title": "密码", "align": "center"},
-                    {"field": "sex", "width": 100, "title": "性别", "align": "center"},
-                    {
-                        "field": "operate",
-                        "width": 178,
-                        "title": "操作",
-                        "fixed": "right",
-                        "toolbar": "#bar",
-                        "align": "center"
-                    }
-                ]
-            ],
-            page: true
-        });
-        //监听工具条
-        table.on("tool(user)", function (obj) {
-            var data = obj.data;
-            if (obj.event === "add") {
-                layer.open({
-                    type: 1,
-                    title: "添加用户",
-                    content: $("#addUser"),
-                    cancel: function () {
-                        $("#addUser").hide();
-                    }
-                });
-            } else if (obj.event === "del") {
-                layer.confirm("确定删除该用户吗？", function (index) {
-                    deleteUser(data.id);
-                    obj.del();
-                    layer.close(index);
-                });
-            } else if (obj.event === "edit") {
-                $("#updateId").val(data.id);
-                $("#updateUsername").val(data.username);
-                $("#updatePassword").val(data.password);
-                $("input[name='updateSex'][value="+data.sex+"]").attr("checked",true);
-                layer.open({
-                    type: 1,
-                    title: "更新用户",
-                    content: $("#updateUser"),
-                    cancel: function () {
-                        $("#updateUser").hide();
-                    }
-                });
-            }
-        });
-    });
+    var table = layui.table;
 
-    layui.use("form", function () {
-        form = layui.form;
-        form.render();//刷新表单
-        //添加用户
-        form.on("submit(addUser)", function (data) {
-            addUser(data.field);
-        });
-        //更新用户
-        form.on("submit(updateUser)", function (data) {
-            updateUser(data.field);
-            $("#updateUser").hide();
-        });
+    //加载table数据
+    table.render({
+        "elem": "#user",
+        "url": "/user/getUsers",
+        "cellMinWidth": 80,
+        "cols": [
+            [
+                {"field": "id", "width": 100, "title": "ID", "sort": true, "align": "center"},
+                {"field": "username", "width": 100, "title": "用户名", "align": "center"},
+                {"field": "password", "width": 100, "title": "密码", "align": "center"},
+                {"field": "sex", "width": 100, "title": "性别", "align": "center"},
+                {
+                    "field": "operate",
+                    "width": 178,
+                    "title": "操作",
+                    "fixed": "right",
+                    "toolbar": "#bar",
+                    "align": "center"
+                }
+            ]
+        ],
+        page: true
+    });
+    //监听工具条
+    table.on("tool(user)", function (obj) {
+        var data = obj.data;
+        if (obj.event === "add") {
+            form.render();//刷新表单
+            layer.open({
+                type: 1,
+                title: "添加用户",
+                content: $("#addUser"),
+                cancel: function () {
+                    $("#addUser").hide();
+                }
+            });
+        } else if (obj.event === "del") {
+            layer.confirm("确定删除该用户吗？", function (index) {
+                deleteUser(data.id);
+                obj.del();
+                layer.close(index);
+            });
+        } else if (obj.event === "edit") {
+            $("#updateId").val(data.id);
+            $("#updateUsername").val(data.username);
+            $("#updatePassword").val(data.password);
+            if (data.sex === '男') {
+                $("input[name='updateSex'][value='男']").attr("checked", true);
+                $("input[name='updateSex'][value='女']").attr("checked", false);
+            } else if (data.sex === '女') {
+                $("input[name='updateSex'][value='男']").attr("checked", false);
+                $("input[name='updateSex'][value='女']").attr("checked", true);
+            }
+            form.render();//刷新表单
+            layer.open({
+                type: 1,
+                title: "更新用户",
+                content: $("#updateUser"),
+                cancel: function () {
+                    $("#updateUser").hide();
+                }
+            });
+        }
     });
 
     function addUser(user) {
         $.ajax({
             type: "post",
-            dataType: "json",
-            contentType: "application/json",
             url: "/user/add",
+            contentType: "application/json",
+            dataType: "json",
             data: JSON.stringify(user),
-            success: function (data) {
-                if (data) {
+            success: function (res) {
+                if (res.code === 0) {
                     layer.open({
                         content: "添加成功",
                         yes: function (index) {
@@ -306,14 +310,15 @@
     }
 
     function updateUser(user) {
+        user.sex = user.updateSex;
         $.ajax({
             type: "put",
-            dataType: "json",
-            contentType: "application/json",
             url: "/user/update",
+            contentType: "application/json",
+            dataType: "json",
             data: JSON.stringify(user),
-            success: function (data) {
-                if (data) {
+            success: function (res) {
+                if (res.code === 0) {
                     layer.open({
                         content: "更新成功",
                         yes: function (index) {
@@ -343,10 +348,10 @@
     function deleteUser(id) {
         $.ajax({
             type: "delete",
-            dataType: "json",
             url: "/user/delete/" + id,
-            success: function (data) {
-                if (data) {
+            dataType: "json",
+            success: function (res) {
+                if (res.code === 0) {
                     layer.open({
                         content: "删除成功",
                         yes: function (index) {
