--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,32 +30,28 @@
 
 </body>
 <script>
-    layui.use('layer', function () {
-        layer = layui.layer;
-    });
-    layui.use('form', function () {
-        form = layui.form;
-    });
-    form.render();//刷新表单
+    var layer = layui.layer;
+    var form = layui.form;
+
     form.on('submit(login)', function (data) {
         var manager = {"loginName": data.field.loginName, "password": data.field.password};
         $.ajax({
             type: 'post',
+            url: '/manager/auth',
             contentType: "application/json",
             dataType: 'json',
-            url: '/manager/auth',
             data: JSON.stringify(manager),
-            aysnc: false,
             success: function (res) {
-                if (res.code === '0') {
-                  window.location = "/home";
+                console.log(res);
+                if (res.code === 0) {
+                    window.location = "/home";
                 } else {
-                  layer.open({
-                    content: '用户名或密码错误',
-                    yes: function (index) {
-                      layer.close(index); //如果设定了yes回调，需进行手工关闭
-                    }
-                  });
+                    layer.open({
+                        content: '用户名或密码错误',
+                        yes: function (index) {
+                            layer.close(index); //如果设定了yes回调，需进行手工关闭
+                        }
+                    });
                 }
             }
         });
